<resources>
    <string name="app_name">Minha Agenda</string>

    <!-- MAIN ACTIVITY -->
    <string name="Btn_Login">Entrar</string>
    <string name="Btn_Registro">Registrar-se</string>

    <!-- Atividade de Registro -->
    <string name="CriarContaTXT">Criar uma conta</string>
    <string name="NomeEt">Nome</string>
    <string name="EmailEt">E-mail</string>
    <string name="SenhaEt">Senha</string>
    <string name="ConfirmarSenhaEt">Confirmar senha</string>
    <string name="RegistrarUsuario">Registrar-se</string>
    <string name="TenhoumacontaTXT">Tenho uma conta</string>


    <!-- Atividade de Login -->
    <string name="IniciarSessaoTXT">Iniciar Sessão</string>
    <string name="EmailLogin">E-mail</string>
    <string name="PassLogin">Senha</string>
    <string name="Btn_Entrar">Entrar</string>
    <string name="NovoUsuarioTXT">Não tem uma conta? Registre-se</string>

    <!-- Menu Principal -->
    <string name="BemvindoPrincipal">Bem vindo(a)!</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NomesPrincipal"> -- </string>
    <string name="EmailPrincipal"> -- </string>

    <string name="AdicionarNotas">Adicionar</string>
    <string name="ListarNotas">Minhas Notas</string>
    <string name="Arquivados">Arquivados</string>
    <string name="Perfil">Perfil</string>
    <string name="Sobre">Sobre</string>
    <string name="EncerrarSessao">Sair</string>

    <!-- Adicionar Nota -->
    <string name="Uid_Usuario">Uid do Usuário</string>
    <string name="Email_usuario">E-mail do usuário</string>
    <string name="Data_hora_atual">Data e hora atual</string>
    <string name="Titulo"> Título </string>
    <string name="Descricao">Descrição</string>
    <string name="Btn_Calendario">Calendário</string>
    <string name="Data"> 00/00/0000 </string>
    <string name="Estado">Não finalizado</string>

    <!-- Menu -->
    <string name="Adicionar_Nota_BD">Adicionar</string>

    <!-- Item nota -->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid do Usuário</string>
    <string name="Email_usuario_Item">E-mail do usuário</string>
    <string name="Data_hora_registro_Item">Registro de data e hora</string>
    <string name="Titulo_Item"> Título </string>
    <string name="Descricao_Item">Descrição</string>
    <string name="Data_Item"> 00/00/0000 </string>
    <string name="Estado_Item">Não finalizado</string>

    // Caixa de diálogo de opções
    <string name="EscolhaOpcaoTXT">Escolha uma opção</string>
    <string name="CD_Apagar">Apagar</string>
    <string name="CD_Atualizar">Atualizar</string>

</resources>