<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarNota.Adicionar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Uid do usuário -->
        <TextView
            android:id="@+id/Uid_Usuario"
            android:hint="@string/Uid_Usuario"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Email do usuário -->
        <TextView
            android:id="@+id/Email_usuario"
            android:hint="@string/Email_usuario"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Data e hora atual do dispositivo -->
        <TextView
            android:id="@+id/Data_hora_atual"
            android:hint="@string/Data_hora_atual"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Título da nota -->
        <EditText
            android:id="@+id/Titulo"
            android:hint="@string/Titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Descrição da nota -->
        <EditText
            android:id="@+id/Descricao"
            android:hint="@string/Descricao"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- Botão para abrir o calendário -->
            <Button
                android:id="@+id/Calendario"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icone_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Exibir a data selecionada -->
            <TextView
                android:id="@+id/Data"
                android:hint="@string/Data"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Estado da nota -->
        <TextView
            android:id="@+id/Estado"
            android:hint="@string/Estado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>