<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CriarContaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registro.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NomeEt"
                android:hint="@string/NomeEt"
                android:inputType="textPersonName|textCapWords"
                android:fontFamily="@font/worksans"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icone_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/EmailEt"
                android:hint="@string/EmailEt"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/worksans"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icone_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/SenhaEt"
                android:hint="@string/SenhaEt"
                android:inputType="textPassword"
                android:fontFamily="@font/worksans"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icone_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmarSenhaEt"
                android:hint="@string/ConfirmarSenhaEt"
                android:inputType="textPassword"
                android:fontFamily="@font/worksans"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icone_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TenhoumacontaTXT"
            android:text="@string/TenhoumacontaTXT"
            android:fontFamily="@font/worksans"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>