<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:text="@string/EscolhaOpcaoTXT"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="selecionar.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <Button
        android:id="@+id/CD_Apagar"
        android:text="@string/CD_Apagar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icone_apagar_cd"
        android:fontFamily="@font/worksans"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/CD_Atualizar"
        android:text="@string/CD_Atualizar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icone_atualizar_cd"
        android:fontFamily="@font/worksans"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>